<resources>
    <string name="app_name">Grid of Bits</string>
    <string name="easy_4x4">Easy (4x4)</string>
    <string name="medium_6x6">Medium (6x6)</string>
    <string name="hard_8x8">Hard (8x8)</string>
    <string name="play">Play!</string>
    <string name="best_times">Best Times</string>
    <string name="how_to_play">How To Play</string>
    <string name="copyright">Copyright &#169; 2015 Franz Sarmiento.</string>

    <string name="title_activity_game">Game Screen</string>
    <string name="surrender">Surrender!</string>

    <string name="title_activity_game_result">Game Result Screen</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_time">Your time is:</string>
    <string name="new_best_time">This has been recorded as one of your new best times!</string>
    <string name="play_again">Play Again!</string>
    <string name="share_score">Share Your Score!</string>
    <string name="share_to">Share to</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>

    <string name="title_activity_best_times">BestTimesActivity</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="how_to_play_intro">
        Hello and thanks for trying out Grid of Bits! This game is perfect for practicing the conversion of numbers from decimal to binary. To win, you must match the decimal numbers found at the end of each row and column (gray boxes) by toggling the correct bits (blue boxes). You must toggle the bits such that the resulting binary number is equal to the decimal number.
    </string>
    <string name="how_to_play_rows_title">Rows:</string>
    <string name="how_to_play_rows">
        The left-most box represents the most significant bit, while the right-most box is the least significant bit or "1".
    </string>
    <string name="how_to_play_cols_title">Columns:</string>
    <string name="how_to_play_cols">
        The top-most box is the most significant bit, while the bottom-most box is the least significant bit or "1".
    </string>
    <string name="how_to_play_rows_example">
        For example, if we have found the decimal number "10" to the right of a row of bits, those same bits should look like this:
    </string>
    <string name="how_to_play_sum_green_explanation">
        Note: the box containing the decimal number 10 is colored green because as you continue toggling, any rows and columns are automatically converted from gray to green if that particular row or column is already correct. In this case, all the bits in the row is toggled correctly so the box containing 10 was converted to green.
    </string>
    <string name="how_to_play_cols_example">
        For example, if we found "10" under a column of bits, the bits should be toggled as follows:
    </string>
    <string name="how_to_play_example_explanation">
        This is because the decimal values of each bit are 8-4-2-1 (8 is the most significant bit, while 1 is the least significant) and 10 is equal to 8 + 2, so we only toggle the bits representing 8 and 2, resulting to the binary number 1010. 8-4-2-1 is for the 4x4 grid, but since each digit in a binary number is simply double the previous one (each digit is a power of 2), this means a 6x6 grid has the following values for each row and column: 32-16-8-4-2-1. Likewise for the 8x8 grid: 128-64-32-16-8-4-2-1.
    </string>
    <string name="how_to_play_winning_condition">
        You win when the correct bits have been toggled for the entire grid!
    </string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="ten">10</string>

    <string name="facebook_app_id">646807565452818</string>
    <string name="url_play_store">https://play.google.com/store/apps/details?id=com.franzsarmiento.gridofbits</string>
</resources>
