<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp" />

        <TextView style="@style/how_to_play_text_view"
            android:text="@string/how_to_play_intro" />

        <TextView style="@style/how_to_play_text_view"
            android:text="@string/how_to_play_rows_title"
            android:textStyle="bold" />

        <TextView style="@style/how_to_play_text_view"
            android:paddingTop="5dp"
            android:text="@string/how_to_play_rows" />

        <TextView style="@style/how_to_play_text_view"
            android:text="@string/how_to_play_cols_title"
            android:textStyle="bold" />

        <TextView style="@style/how_to_play_text_view"
            android:paddingTop="5dp"
            android:text="@string/how_to_play_cols" />

        <TextView style="@style/how_to_play_text_view"
            android:text="@string/how_to_play_rows_example" />

        <TextView style="@style/how_to_play_text_view"
            android:text="@string/how_to_play_cols_example" />

        <TextView style="@style/how_to_play_text_view"
            android:text="@string/how_to_play_example_explanation" />

        <TextView style="@style/how_to_play_text_view"
            android:text="@string/how_to_play_winning_condition" />

    </LinearLayout>
</ScrollView>
