<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeActivity">

    <TextView style="@style/title_text"
        android:id="@+id/tvTitle" />

    <Button style="@style/btn_play"
        android:id="@+id/btnPlayMedium"
        android:text="@string/medium_6x6"
        android:layout_centerVertical="true"
        android:onClick="btnPlayMediumOnClick" />

    <Button style="@style/btn_play"
        android:id="@+id/btnPlayEasy"
        android:text="@string/easy_4x4"
        android:layout_above="@id/btnPlayMedium"
        android:onClick="btnPlayEasyOnClick" />

    <Button style="@style/btn_play"
        android:id="@+id/btnPlayHard"
        android:text="@string/hard_8x8"
        android:layout_below="@id/btnPlayMedium"
        android:onClick="btnPlayHardOnClick" />

    <Button style="@style/btn_play"
        android:text="@string/best_times"
        android:id="@+id/btnBestTimes"
        android:layout_below="@+id/btnPlayHard"
        android:onClick="btnBestTimesOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textSize="12sp"
        android:id="@+id/tvCopyright"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
