<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.franzsarmiento.gridofbits.BestTimesActivity">

    <TextView style="@style/title_text" />

    <TextView style="@style/best_times_text_view_title"
        android:text="@string/medium"
        android:id="@+id/tvMedium"
        android:layout_centerVertical="true" />

    <TextView style="@style/best_times_text_view_score"
        android:id="@+id/tvHard3rd"
        android:layout_above="@+id/tvMedium" />

    <TextView style="@style/best_times_text_view_score"
        android:id="@+id/tvHard2nd"
        android:layout_above="@+id/tvHard3rd" />

    <TextView style="@style/best_times_text_view_score"
        android:id="@+id/tvHard1st"
        android:layout_above="@+id/tvHard2nd" />

    <TextView style="@style/best_times_text_view_title"
        android:text="@string/hard"
        android:id="@+id/tvHard"
        android:layout_above="@id/tvHard1st" />

    <TextView style="@style/best_times_text_view_score"
        android:id="@+id/tvMedium1st"
        android:layout_below="@+id/tvMedium" />

    <TextView style="@style/best_times_text_view_score"
        android:id="@+id/tvMedium2nd"
        android:layout_below="@+id/tvMedium1st" />

    <TextView style="@style/best_times_text_view_score"
        android:id="@+id/tvMedium3rd"
        android:layout_below="@+id/tvMedium2nd" />

    <TextView style="@style/best_times_text_view_title"
        android:text="@string/easy"
        android:id="@+id/tvEasy"
        android:layout_below="@+id/tvMedium3rd" />

    <TextView style="@style/best_times_text_view_score"
        android:id="@+id/tvEasy1st"
        android:layout_below="@+id/tvEasy" />

    <TextView style="@style/best_times_text_view_score"
        android:id="@+id/tvEasy2nd"
        android:layout_below="@+id/tvEasy1st" />

    <TextView style="@style/best_times_text_view_score"
        android:id="@+id/tvEasy3rd"
        android:layout_below="@+id/tvEasy2nd" />
</RelativeLayout>
